[package]
name = "balloon"
version = "0.0.11"
description = "Balloon Hash with Blake2b"
authors = ["hello@organism.org"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/stichtingorganism/balloon"

[dependencies]
subtle = "2"
thiserror = "1"
num-bigint-dig = { version = "0.7", features = ["rand", "i128", "u64_digit", "serde", "prime"] }
num-traits = "0.2"
blake3 = "0.3.8"


[dev-dependencies]
criterion = "0.3"
elapsed = "0.1"

[[bench]]
name = "balloon_benchmarks"
harness = false
