[package]
name = "balloon"
version = "0.0.13"
description = "Balloon Hash"
authors = ["Stichitng Organism", "The SiO4 Project Developers <https://gitlab.com/sio4>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/stichtingorganism/balloon"

[dependencies]
subtle = "2"
thiserror = "1"
blake3 = "0.3.8"
digest = "0.9"

[dev-dependencies]
criterion = "0.3"
criterion-cycles-per-byte = "0.1.2"

[features]
cpb-bench = []

[[bench]]
name = "balloon_benchmarks"
harness = false
